change mentor card CTA text and alignment, fix drift, update navbar.

--- a/src/sass/mdb/custom.scss
+++ b/src/sass/mdb/custom.scss
@@ -538,6 +538,9 @@ footer {
   #bottomNav.scrolled {
     display: block !important;
   }
+  #drift-widget {
+    display: none;
+  }
   header {
     ul {
       display: none !important;
